--- a/store/templates/store/expiry_notification.html
+++ b/store/templates/store/expiry_notification.html
@@ -61,22 +61,22 @@
             <thead class="bg-yellow-300">
                 <tr class="text-xs">
                     <th class="p-1 text-center text-xs font-medium text-gray-700 uppercase tracking-wider">#</th>
-                    <th class="p-1 text-center text-xs font-medium text-gray-700 uppercase tracking-wider">Generic Name</th>
-                    <th class="p-1 text-center text-xs font-medium text-gray-700 uppercase tracking-wider">Trade Name</th>
-                    <th class="p-1 text-center text-xs font-medium text-gray-700 uppercase tracking-wider">Strength</th>
-                    <th class="p-1 text-center text-xs font-medium text-gray-700 uppercase tracking-wider">Expiration Date</th>
+                    <th class="p-1 text-left text-xs font-medium text-gray-700 uppercase tracking-wider">Generic Name</th>
+                    <th class="p-1 text-left text-xs font-medium text-gray-700 uppercase tracking-wider">Trade Name</th>
+                    <th class="p-1 text-left text-xs font-medium text-gray-700 uppercase tracking-wider">Strength</th>
+                    <th class="p-1 text-left text-xs font-medium text-gray-700 uppercase tracking-wider">Expiration Date</th>
                     <th class="p-1 text-center text-xs font-medium text-gray-700 uppercase tracking-wider">Status</th>
                 </tr>
             </thead>
             <tbody class="bg-white divide-y divide-blue-200">
                 {% for drug in drugs %}
-                <tr class="hover:bg-yellow-50 transition ease-in-out duration-150 text-xs text-center">
-                    <td class="p-2 whitespace-nowrap  font-medium text-gray-900">{{ forloop.counter }}</td>
+                <tr class="hover:bg-yellow-50 transition ease-in-out duration-150 text-xs">
+                    <td class="p-2 whitespace-nowrap text-center font-medium text-gray-900">{{ forloop.counter }}</td>
                     <td class="p-2 whitespace-nowrap  text-gray-600">{{ drug.generic_name }}</td>
                     <td class="p-2 whitespace-nowrap  text-gray-600">{{ drug.trade_name }}</td>
                     <td class="p-2 whitespace-nowrap  text-gray-600">{{ drug.strength }}</td>
                     <td class="p-2 whitespace-nowrap  text-gray-600">{{ drug.expiration_date }}</td>
-                    <td class="p-2 whitespace-nowrap">
+                    <td class="p-2 whitespace-nowrap text-center">
                         {% if drug.status == 'expired' %}
                         <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-rose-50 text-red-600">
                             <i class="fas fa-exclamation-triangle mr-2"></i>Expired!
