--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -42,27 +42,27 @@
         <div class="overflow-x-auto max-h-[65vh]">
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-cyan-400">
-                    <tr class="text-xs text-center">
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Supply Date</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Generic Name</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Trade Name</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">strength</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Dosage Form</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Pack Size</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Selling Price</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Expiry Date</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Value</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">edit</th>
+                    <tr class="text-xs text-left">
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Supply Date</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Generic Name</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Trade Name</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">strength</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Dosage Form</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Pack Size</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Selling Price</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Expiry Date</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">Value</th>
+                        <th scope="col" class="px-3   text-xs font-medium text-gray-900 uppercase tracking-wider">edit</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                     {% for i in po %}
-                    <tr class="{% cycle 'bg-white' 'bg-cyan-50' %} text-xs text-center">
+                    <tr class="{% cycle 'bg-white' 'bg-cyan-50' %} text-xs text-left">
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.supply_date|default_if_none:'N/A' }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.category|default_if_none:'N/A' }}</td>
