--- a/store/templates/store/return_list.html
+++ b/store/templates/store/return_list.html
@@ -36,7 +36,7 @@
         <div class="overflow-x-auto rounded-lg">
             <table class="min-w-full divide-y divide-purple-200">
                 <thead class="bg-purple-500">
-                    <tr class="text-center text-xs text-white">
+                    <tr class="text-left text-xs text-white">
                         <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">#</th>
                         <th class="px-4 py-2">Patient Info</th>
                         <th class="px-4 py-2">Category</th>
@@ -46,7 +46,7 @@
                 </thead>
                 <tbody class="bg-white divide-y divide-purple-100">
                     {% for drug in returned_drugs %}
-                    <tr class="hover:bg-purple-50 transition-colors duration-300 text-xs text-center">
+                    <tr class="hover:bg-purple-50 transition-colors duration-300 text-xs text-left">
                         <td class="p-3 whitespace-nowrap text-gray-700">{{ forloop.counter }}</td>
                         <td class=" px-4 py-2">{{ drug.patient_info }}</td>
                         <td class=" px-4 py-2">{{ drug.category.name }}</td>
