--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -53,7 +53,7 @@
             <div class="overflow-x-auto max-h-[65vh]">
                 <table class="min-w-full divide-y divide-gray-300">
                     <thead class="bg-orange-500">
-                        <tr class="text-xs text-center text-white uppercase">
+                        <tr class="text-xs text-left text-white uppercase">
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">#</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date Received</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Generic Drug</th>
@@ -70,7 +70,7 @@
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
                         {% for i in page_obj %}
-                        <tr class="{% cycle 'bg-white' 'bg-orange-50' %} text-xs text-center">
+                        <tr class="{% cycle 'bg-white' 'bg-orange-50' %} text-xs text-left">
                             <td class="px-4 py-2 text-gray-700">{{ forloop.counter }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ i.updated_at|default_if_none:'N/A'}}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ i.drug.generic_name|default_if_none:'N/A'|upper }}</td>
