--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -29,15 +29,21 @@
               </div>
             </a>
           </div>
-          {% if request.user.is_superuser %}
-          <div class="mt-6">
-            <a href="{% url 'worth' %}" class="group block">
-              <div class="bg-amber-600 group-hover:bg-white text-white group-hover:text-amber-600 border border-transparent group-hover:border-amber-500 py-3 px-6 rounded-lg shadow-md group-hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center uppercase text-sm font-medium">
-                <span class="mr-3 text-2xl group-hover:scale-110 transition-transform">&#x20A6;</span>
-                <span>Pharmacy Value</span>
+            {% if request.user.is_superuser %}
+            <div class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-4 text-sm uppercase font-medium">
+            <a href="{% url 'worth' %}" class="group">
+              <div class="bg-yellow-600 group-hover:bg-white text-white group-hover:text-yellow-500 border border-transparent group-hover:border-yellow-500 py-3 px-6 rounded-lg shadow-md group-hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
+              <i class="fas fa-naira-sign mr-3 text-2xl group-hover:scale-110 transition-transform"></i>
+              <span>Pharmacy Value</span>
               </div>
             </a>
-          </div>
+            <a href="{% url 'login_activity_log' %}" class="group">
+              <div class="bg-teal-600 group-hover:bg-white text-white group-hover:text-teal-500 border border-transparent group-hover:border-teal-500 py-3 px-6 rounded-lg shadow-md group-hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
+              <i class="fas fa-user-check mr-3 text-2xl group-hover:scale-110 transition-transform"></i>
+              <span>Login Tracker</span>
+              </div>
+            </a>
+            </div>
           {% endif %}
         </div>
       </div>
