--- a/store/templates/store/login_activity_list.html
+++ b/store/templates/store/login_activity_list.html
@@ -94,7 +94,7 @@
                             
                             <div class="flex items-center" title="Device Type">
                                 <i class="{{ l.get_device_icon }} text-gray-600 mr-1"></i>
-                                <span class="text-gray-600">{{ l.device_type|title }}</span>
+                                <span class="text-gray-600">{{ l.device_type }}</span>
                             </div>
                             
                             <div class="flex items-center" title="OS: {{ l.os }}">
@@ -182,7 +182,7 @@
                                 </div>
                                 <div class="flex items-center" title="Device Type">
                                     <i class="{{ l.get_device_icon }} text-gray-600 mr-1"></i>
-                                    <span class="text-xs text-gray-600">{{ l.device_type|title }}</span>
+                                    <span class="text-xs text-gray-600">{{ l.device_type }}</span>
                                 </div>
                                 <div class="flex items-center" title="OS: {{ l.os }}">
                                     <i class="{{ l.get_os_icon }} text-gray-600 mr-1"></i>
